[package]
name = "professor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
lazy_static = "1.4"
libc = "^0.2.66"
log = "0.4"
nix = "0.23"
parking_lot = "0.11"
tempfile = "3.1"
thiserror = "1.0"
findshlibs = "0.10"
cfg-if = "1.0"
smallvec = "1.7"

[dev-dependencies]
pretty_env_logger = "*"
